@@ -1,13 +1,17 @@
 # CHANGES TO MTurkR 0.5 #
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
+* Using `ContactWorkers` in batch mode now returns a dataframe identical in structure to using it in regular mode, with one row per worker. (#32)
 * The `signature` argument to `request` now defaults to `NULL` and is generated automatically.
+* `HITsToDataFrame` now returns, for the QualificationRequirements list element, an empty dataframe rather a single NA missing value if a given HIT does not have any QualificationRequirements attached to it.
+* `request` now uses `curlPerform` instead `getURL` to gain finer control over API requests.
 * `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
 * `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.
 
 ## BUG FIXES ##
 
 ## DOCUMENTATION ##
+* Work on the MTurkR wiki (https://github.com/leeper/MTurkR/wiki) has begun, with contributions from Kyle Hamilton.
 * The `add.seconds` parameter was incorrectly called `add.time` in the `ExtendHIT` documentation.
 
 # CHANGES TO MTurkR 0.4 #
